# bookstore

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
.github/workflows/: buil.yml  heroku-deploy.yml
bookstore/: settings.py  urls.py
order/: admin.py  factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py  0002_product_title.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
